• enable normal white-space rules for script output and convert successive space-runs to using non-breaking spaces. This appears to be the only way to get real word wrap with pre-formatted text using WebKit — we set ‘-khtml-nbsp-mode: space;’ so that copy’n’paste should see the non-breaking spaces as just spaces, although omitting that setting seems to have the same effect (WebKit bug?)
git-svn-id: http://macromates.com/svn/Bundles/trunk@4898 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Support/css/webpreview.css
+++ b/Support/css/webpreview.css
@@ -274,7 +274,6 @@ div.rubymate {
 }
 
 div.rubymate > div {
-	word-wrap: break-word;
 	border-bottom: 1px dotted #666;
 	padding: 1ex;
 }
